--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
     </div>
     <div class="right-column">
-      <img src="/Images/nik-QT3yOjx32rk-unsplash.jpg" class="logo-intro" alt="Intro Image">
+      <img src="Images/nik-QT3yOjx32rk-unsplash.jpg" class="logo-intro" alt="Intro Image">
     </div>
   </div>
 </section>
@@ -55,17 +55,17 @@
       <div class="feature-box">
         <h3>Content Creation</h3>
         <p>We produce high-quality visuals, videos, and copy that capture attention and reflect your brand's voice.</p>
-        <img src="/Images/camera.png" class="feature-one-img" alt="Content Creation">
+        <img src="Images/camera.png" class="feature-one-img" alt="Content Creation">
       </div>
       <div class="feature-box">
         <h3>Social Media Moderation</h3>
         <p>We monitor your pages, respond to comments and messages, and keep your community active and positive.</p>
-        <img src="/Images/moderator.png" class="feature-two-img" alt="Moderation">
+        <img src="Images/moderator.png" class="feature-two-img" alt="Moderation">
       </div>
       <div class="feature-box">
         <h3>Media Buying</h3>
         <p>We run targeted ad campaigns to reach the right audience and get the most value from your budget.</p>
-        <img src="/Images/cost.png" class="feature-three-img" alt="Media Buying">
+        <img src="Images/cost.png" class="feature-three-img" alt="Media Buying">
       </div>
     </div>
   </div>
@@ -84,13 +84,13 @@
 
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="/Images/prateek-katyal-xv7-GlvBLFw-unsplash.jpg" alt="Slide 1">
+        <img src="Images/prateek-katyal-xv7-GlvBLFw-unsplash.jpg" alt="Slide 1">
       </div>
       <div class="carousel-item">
-        <img src="/Images/carlynn-alarid-_xJqCQgkpLc-unsplash.jpg" alt="Slide 2">
+        <img src="Images/carlynn-alarid-_xJqCQgkpLc-unsplash.jpg" alt="Slide 2">
       </div>
       <div class="carousel-item">
-        <img src="/Images/nik-QT3yOjx32rk-unsplash.jpg" alt="Slide 3">
+        <img src="Images/nik-QT3yOjx32rk-unsplash.jpg" alt="Slide 3">
       </div>
     </div>
 
