--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <!-- Navigation Bar -->
 <nav class="navbar">
   <div class="logo"> 
-    <a href="/index.html"><img src="/Images/working.png" class="logo-nav" alt="KRM Logo"></a>
-    <a class="company-name" href="/index.html">KRM</a>
+  <a href="index.html"><img src="Images/working.png" class="logo-nav" alt="KRM Logo"></a>
+<a class="company-name" href="index.html">KRM</a>
   </div>
 
   <ul class="nav-links" id="navLinks">
