--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     <div class="left-column">
       <h2>KRM</h2>
       <p class="info-intro">
-        This is the content of the left column. This is the content of the left column. This is the content of the left column.
+        At KRM, we specialize in digital storytelling, social media strategy, and creative production. Our mission is to help brands build powerful online presences through compelling content, data-driven campaigns, and hands-on support. With a team of passionate creatives and marketing professionals, KRM is where vision meets execution — turning ideas into impact.
+
       </p>
       <div> 
         <button class="contact-us" onclick="location.href='contact-us.html'">Contact Us</button>
