--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
       </p>
       <div> 
-        <button class="contact-us" onclick="location.href='contact-us.html'">Contact Us</button>
+        <button class="contact-us" onclick="location.href="#contact">Contact Us</button>
       </div>
     </div>
     <div class="right-column">
